--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel ="stylesheet" type="text/css" href="formulario.css">
     <title>Cadastro</title>
 </head>
 <body>
@@ -13,24 +14,28 @@
     </div>
 
     <form>
-        <fieldset>
-            <div>
-                <label>Nome</label>
-                <input type="text" name="nome" id="nome">
+        <fieldset class ="grupo">
+            <div class = "campo">
+                <label for="nome"><strong>Nome</strong></label>
+                <input type="text" name="nome" id="nome" required>
             </div>
-            <div>
-                <label>Sobrenome</label>
-                <input type="text" name="sobrenome" id="sobrenome">
+
+            <div class = campo>
+                <label for="Sobrenome"><strong>Sobrenome</strong></label>
+                <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
-        </fieldset>
-<fieldset>
-        <div>
-            <label>Email</label>
-            <input type:"email" name="email" id="email">
-        </div>
+
+  
     </fieldset>
-    <fieldset>
-        <div>
+
+        <div class = "campo">
+            <label for="email"><strong>Email</strong></label>
+            <input type="email" name="email" id="email" required>
+        </div>
+
+
+    <fieldset class ="grupo">
+        <div class = "campo">
             <label>De qual lado da aplicação você desenvolve?</label>
             <label>
                 <input type ="radio" name="devweb" value="frontend" checked>Front-end
@@ -43,19 +48,19 @@
             </label>
         </div>
     </fieldset>
-    <fieldset>
-        <div>
-            <label>Senioridade</label>
+    <fieldset class ="grupo">
+        <div class = "campo">
+            <label for="senioridade"><strong>Senioridade</strong></label>
             <select id="senioridade">
-                <option selected value="">Selecione</option>
+                <option selected value="disabled">Selecione</option>
                 <option>Junior</option>
                 <option>Pleno</option>
                 <option>Senior</option>
             </select>
         </div>
     </fieldset>
-    <fieldset>
-        <div>
+  
+        <div id = "check">
             <label>Selecione as tecnolgias que utiliza:</label> <br><br>
             <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
             <label for="tecnologia 1">HTML</label>
@@ -72,14 +77,14 @@
             <input type ="checkbox" id="tecnologia7" name="tecnologia7" Value="Java">
             <label for="tecnologia7">Java</label>
         </div>
-    </fieldset>
-    <fieldset>
-        <div>
+   
+    <fieldset class ="grupo">
+        <div class = "campo">
             <label>Conte um pouco da sua experiência:</label>
             <textarea row="6" style="width: 26em" id="experiencia" name ="experiencia"></textarea>
         </div>
     </fieldset><br>
-           <button type = "submit">Concluído</button>
+           <button class="botao" type = "submit">Concluído</button>
     </form>
 </body>
 </html>
